@@ -1,4 +1,11 @@
+2006-12-27  Keishi Suenaga <skeishi@yahoo.co.jp>
+
+	* timidity/portaudio_a.c:  bug fix
+	* interface/w32g_pref.c, interface/w32g_pref.h,
+	  w32_portaudio_dll.c: asio dialog in win GUI.
+	  
 2006-12-26  Keishi Suenaga <skeishi@yahoo.co.jp>
+
 	* timidity/portaudio_a.c
 	  timidity/w32_portaudio_dll.c: fix portaudio v19 support
 	  now use only one dll named portaudio.dll.
